Fixed not wrapping fieldsets.

--- a/resources/clientStyles.css
+++ b/resources/clientStyles.css
@@ -8,6 +8,7 @@ fieldset{
 	border: none;
 	background-color: #FFFFFF;
 	pointer-events: none;
+	display: inline-block;
 }
 
 canvas{
